# HackNation-6th-edition

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  SCRIPT.md  SUBMISSION-FORM-ANSWERS.md  pyproject.toml
data/uspto/: tsdr_statusview_snapshot.json
data/verification/: receipts.json
db/: README.md  schema.sql
demo-assets/: CLAUDE.md  FIXTURE-URLS.md  PSEUDONYMIZATION.md  SHOTLIST.md
demo-assets/deck/: README.md  ledgerline-deck.html
demo-assets/fixtures/kestrelops/: index.html
demo-assets/outreach/: northgate.md
docs/: CHALLENGES.md  HACKATHON.md  HANDOFF.md  IDEA.md  ONEPAGER.md  RESEARCH.md  SUBMISSION.md  TASKS.md
slides/: video2.html
web/: next.config.ts  package-lock.json  package.json
web/.smoke/: FALLBACK-demo.json  demo.smoke.json  hash.txt
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AppShell.tsx  ClaimList.tsx  DiscoveryWorkspace.tsx  PanelBoundary.tsx  SignalFeed.tsx  charts.tsx  context.tsx  honesty.tsx  memo.tsx  opportunity.tsx  person.tsx  personDetail.tsx  primitives.tsx  sourcing.tsx
web/lib/: data.ts  showcase.ts  types.ts  util.ts
web/public/: demo.json
wl/: plan_wacil.md
worker/: __init__.py  db.py  demo_overrides.json  export_demo.py  init_db.py  ledger.py  prove_asof.py  run_all.py  seed.py  store.py  timing.py
worker/collectors/: CLAUDE.md  arxiv.py  base.py  channels.py  domains.py  hn.py  uspto.py
worker/scoring/: CLAUDE.md  attribution.py  axes.py  founder_score.py  manifest.py  query.py  thesis.py  trust.py
worker/verify/: __init__.py  check.py  fetch.py  tavily.py
(+27 files in other folders)
